network.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "This is for networking purpose",
    "Parameters": {
        "vpccidr": {
            "Type": "String",
            "Default": "192.168.0.0/16"
        },
        "subnetcidrs": {
            "Type": "CommaDelimitedList",
            "Default": "192.168.0.0/24,192.168.1.0/24,192.168.2.0/24,192.168.3.0/24,192.168.4.0/24,192.168.5.0/24"
        },
        "avzo1": {
            "Type": "AWS::EC2::AvailabilityZone::Name",
            "Description": "This is zone1"
        },
        "avzo2": {
            "Type": "AWS::EC2::AvailabilityZone::Name",
            "Description": "This is zone2"
        },
        "keypair": {
            "Type": "AWS::EC2::KeyPair::KeyName",
            "Default": "newkey"
        },
        "amiid": {
            "Type": "AWS::EC2::Image::Id",
            "Default": "ami-007855ac798b5175e"
        }
    },
    "Resources": {
        "vpc1": {
            "Type": "AWS::EC2::VPC",
            "Properties": {
                "CidrBlock": {
                    "Ref": "vpccidr"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "newvpc"
                    }
                ]
            }
        },
        "subnet1": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "CidrBlock": {
                    "Fn::Select": [
                        0,
                        {
                            "Ref": "subnetcidrs"
                        }
                    ]
                },
                "VpcId": {
                    "Ref": "vpc1"
                },
                "AvailabilityZone": {
                    "Ref": "avzo1"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "subnet1"
                    }
                ]
            }
        },
        "subnet2": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "CidrBlock": {
                    "Fn::Select": [
                        1,
                        {
                            "Ref": "subnetcidrs"
                        }
                    ]
                },
                "VpcId": {
                    "Ref": "vpc1"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "subnet2"
                    }
                ],
                "AvailabilityZone": {
                    "Ref": "avzo2"
                }
            }
        },
        "igw": {
            "Type": "AWS::EC2::InternetGateway",
            "Properties": {
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "igw1"
                    }
                ]
            }
        },
        "vpcgatewayattachment": {
            "Type": "AWS::EC2::VPCGatewayAttachment",
            "Properties": {
                "InternetGatewayId": {
                    "Ref": "igw"
                },
                "VpcId": {
                    "Ref": "vpc1"
                }
            }
        },
        "routetable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "vpc1"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "publicroute"
                    }
                ]
            }
        },
        "routes": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "DestinationCidrBlock": "0.0.0.0/0",
                "GatewayId": {
                    "Ref": "igw"
                },
                "RouteTableId": {
                    "Ref": "routetable"
                }
            }
        },
        "subnetassoc": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {
                    "Ref": "routetable"
                },
                "SubnetId": {
                    "Ref": "subnet1"
                }
            }
        },
        "securitygroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupName": "sshhttpsecurity",
                "GroupDescription": "This is for opensshandhttp",
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": 22,
                        "ToPort": 22,
                        "CidrIp": {
                            "Ref": "vpccidr"
                        }
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": 80,
                        "ToPort": 80,
                        "CidrIp": {
                            "Ref": "vpccidr"
                        }
                    }
                ],
                "VpcId": {
                    "Ref": "vpc1"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "opensshandhttp"
                    }
                ]
            }
        },
        "webec2": {
            "Type": "AWS::EC2::Instance",
            "Properties": {
                "KeyName": {
                    "Ref": "keypair"
                },
                "ImageId": {
                    "Ref": "amiid"
                },
                "InstanceType": "t2.micro",
                "Monitoring": "false",
                "NetworkInterfaces": [
                    {
                        "AssociatePublicIpAddress": true,
                        "GroupSet": [
                            {
                                "Ref": "securitygroup"
                            }
                        ],
                        "SubnetId": {
                            "Ref": "subnet1"
                        },
                        "DeviceIndex": 0
                    }
                ],
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "web"
                    }
                ],
                "UserData": {
                    "Fn::Base64": {
                        "Fn::Join": [
                            "",
                            [
                                "#!/bin/bash",
                                "sudo apt update",
                                "sudo apt install apache2 -y"
                            ]
                        ]
                    }
                }
            }
        }
    }
}
